--- a/templates/front/baseFront.html.twig
+++ b/templates/front/baseFront.html.twig
@@ -16,8 +16,9 @@
 			{% endblock %}
 		</title>
 		{# Run `composer require symfony/webpack-encore-bundle`
-																																           and uncomment the following Encore helpers to start using Symfony UX #}
+																																						           and uncomment the following Encore helpers to start using Symfony UX #}
 		{% block stylesheets %}
+
 			<!-- Css Styles -->
 			<link rel="stylesheet" href="{{asset('front/assets/css/chat.css')}}" type="text/css">
 			<link rel="stylesheet" href="{{asset('front/assets/css/bootstrap.min.css')}}" type="text/css">
@@ -31,7 +32,8 @@
 		{% endblock %}
 
 		{% block javascripts %}
-			{#{{ encore_entry_script_tags('app') }}#}
+			<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+			<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 		{% endblock %}
 	</head>
 	<body>
@@ -504,7 +506,7 @@
 										document.write(new Date().getFullYear());
 									</script>
 									All rights reserved | This
-																																				                                template is made with
+																																																															                                template is made with
 									<i class="fa fa-heart" aria-hidden="true"></i>
 									by
 									<a href="https://colorlib.com" target="_blank">Reality Vision</a>
@@ -579,5 +581,7 @@
 		<script src="{{asset('front/assets/js/jquery.slicknav.js')}}"></script>
 		<script src="{{asset('front/assets/js/owl.carousel.min.js')}}"></script>
 		<script src="{{asset('front/assets/js/main.js')}}"></script>
+		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"></script>
+
 	</body>
 </html>
