--- a/templates/front/chat.html.twig
+++ b/templates/front/chat.html.twig
@@ -110,72 +110,106 @@
 
 												</div>
 											</div>
+
+											<!--starttt convvvv-->
 											<div class="chat__content pt-4 px-3">
 												<ul class="chat__list-messages">
-													<li>
-														<div class="chat__time">Yesterday at 16:43</div>
-														<div class="chat__bubble chat__bubble--you">
-															Hey,
-														</div>
-													</li>
-													<li>
-														<div class="chat__bubble chat__bubble--me">
-															Hi! I just checked, your order went through and is on it's
-															                                                            way home. Enjoy your new computer! 😃
-														</div>
-													</li>
-													<li>
-														<div class="chat__bubble chat__bubble--you">
-															Ohh thanks ! I was really worried about it !
-														</div>
-														<div class="chat__bubble chat__bubble--you">
-															Can't wait for it to be delivered
-														</div>
-													</li>
-													<li>
-														<div class="chat__time">07:14</div>
-														<div class="chat__bubble chat__bubble--me">
-															Aenean iaculis massa non lorem dignissim volutpat. Praesent
-															                                                            id faucibus lorem, a sagittis nunc. Duis facilisis lectus
-															                                                            vel sapien ultricies, sed placerat augue elementum. In
-															                                                            sagittis, justo nec sodales posuere, nunc est sagittis
-															                                                            tellus, eget scelerisque dolor risus vel augue
-														</div>
-														<div class="chat__bubble chat__bubble--me">
-															Is everything alright?
-														</div>
+													{% for chat in chats %}
+														{% if (chat.idUser.idUser != 32) and (chat.message != null )    %}
+															<li>
+																<div class="chat__time">{{ chat.dateMessage ? chat.dateMessage|date('m-d H:i') : '' }}</div>
+																<div class="chat__bubble chat__bubble--you">
+																	{{ chat.message }}
+																	<a href="#" class="fff" data-placement="top" title="report message" data-toggle="modal" data-target="#reportModal">
+																		<i class="fa fa-warning"></i>
+																	</a>
+																</div>
 
-													</li>
-													<li>
-														<div class="chat__bubble chat__bubble--you">
-															Vestibulum finibus pulvinar quam, at tempus lorem.
-															                                                            Pellentesque justo sapien, pulvinar sed magna et, vulputate
-															                                                            commodo nisl. Aenean pharetra ornare turpis. Pellentesque
-															                                                            viverra blandit ullamcorper. Mauris tincidunt ac lacus vel
-															                                                            convallis. Vestibulum id nunc nec urna accumsan dapibus quis
-															                                                            ullamcorper massa. Aliquam erat volutpat. Nam mollis mi et
-															                                                            arcu dapibus condimentum.
-														</div>
-														<div class="chat__bubble chat__bubble--you">
-															Nulla facilisi. Duis laoreet dignissim lectus vel maximus
-														</div>
-														<div class="chat__bubble chat__bubble--you">
-															Curabitur volutpat, ipsum a condimentum hendrerit ! 😊
-														</div>
-													</li>
-													<li>
-														<div class="chat__time">09:26</div>
-														<div class="chat__bubble chat__bubble--me">
-															Perfect, thanks !
-														</div>
-													</li>
+															</li>
+														{% elseif (chat.idUser.idUser == 32) and (chat.message != null ) %}
+															<li>
+																<div class="chat__time">{{ chat.dateMessage ? chat.dateMessage|date('m-d H:i') : '' }}</div>
+																<div class="chat__bubble chat__bubble--me">
+																	{{ chat.message }}
+
+																</div>
+
+															</li>
+														{% endif %}
+														<!--
+																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																												<li>
+																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																													<div class="chat__bubble chat__bubble--me">
+																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																														Hi! I just checked, your order went through and is on it's
+																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																											                                                            way home. Enjoy your new computer! 😃
+																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																													</div>
+																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																												</li>
+																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																														-->
+
+
+													{% endfor %}
 												</ul>
 											</div>
+											<!---modaaaaaaaaaaaaaaaaaaaaaaaalll deleetteee -->
+											<div class="modal fade" id="reportModal">
+												<div class="modal-dialog">
+													<div class="modal-content">
+														<div class="modal-header">
+															<h5 class="modal-title">Select a problem to report
+															</h5>
+															<button type="button" class="close" data-dismiss="modal">
+																<span>&times;</span>
+															</button>
+														</div>
+														<div class="modal-body">
+
+															<div class="form-check gg">
+																<input type="checkbox" class="form-check-input" id="exampleCheck1">
+																<label class="form-check-label" for="exampleCheck1">Hate speech or symbols</label>
+															</div>
+															<div class="form-check gg ">
+																<input type="checkbox" class="form-check-input" id="exampleCheck1">
+																<label class="form-check-label" for="exampleCheck1">Violence or dangerous organizations</label>
+															</div>
+															<div class="form-check gg">
+																<input type="checkbox" class="form-check-input" id="exampleCheck1">
+																<label class="form-check-label" for="exampleCheck1">Sale of illegal or regulated goods</label>
+															</div>
+															<div class="form-check gg">
+																<input type="checkbox" class="form-check-input" id="exampleCheck1">
+																<label class="form-check-label" for="exampleCheck1">Bullying or harassment</label>
+															</div>
+															<div class="form-check gg">
+																<input type="checkbox" class="form-check-input" id="exampleCheck1">
+																<label class="form-check-label" for="exampleCheck1">Intellectual property violation</label>
+															</div>
+															<div class="form-check gg">
+																<input type="checkbox" class="form-check-input" id="exampleCheck1">
+																<label class="form-check-label" for="exampleCheck1">Suicide or self-injury</label>
+															</div>
+															<div class="form-check gg">
+																<input type="checkbox" class="form-check-input" id="exampleCheck1">
+																<label class="form-check-label" for="exampleCheck1">Spam</label>
+															</div>
+
+
+														</div>
+														<div class="modal-footer">
+															<button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">Close</button>
+															<button type="button" class="btn btn-danger btn-sm">Confirm</button>
+														</div>
+													</div>
+												</div>
+											</div>
+
+											<!--buttons convvvv-->
 											<div class="chat__send-container px-2 px-md-3 pt-1 pt-md-3">
 												<div class="custom-form__send-wrapper">
-													<input type="text" class="form-control custom-form" id="message" placeholder="Ecrivez un message …" autocomplete="off">
-													<div class="custom-form__send-img">
-														<svg xmlns="http://www.w3.org/2000/svg" class="svg-icon svg-icon--send-img" viewbox="0 0 45.7 45.7">
+													{{ form_start(form) }}
+													{{ form_widget(form) }}
+													<!--<button class="btn">{{ button_label|default('Save') }}</button>-->
+
+													<!--	<input type="text" class="form-control custom-form" id="message" placeholder="Ecrivez un message …" autocomplete="off"> -->
+														<div class="custom-form__send-img"> <svg xmlns="http://www.w3.org/2000/svg" class="svg-icon svg-icon--send-img" viewbox="0 0 45.7 45.7">
 															<path d="M6.6,45.7A6.7,6.7,0,0,1,0,39.1V6.6A6.7,6.7,0,0,1,6.6,0H39.1a6.7,6.7,0,0,1,6.6,6.6V39.1h0a6.7,6.7,0,0,1-6.6,6.6ZM39,4H6.6A2.6,2.6,0,0,0,4,6.6V39.1a2.6,2.6,0,0,0,2.6,2.6H39.1a2.6,2.6,0,0,0,2.6-2.6V6.6A2.7,2.7,0,0,0,39,4Zm4.7,35.1Zm-4.6-.4H6.6a2.1,2.1,0,0,1-1.8-1.1,2,2,0,0,1,.3-2.1l8.1-10.4a1.8,1.8,0,0,1,1.5-.8,2.4,2.4,0,0,1,1.6.7l4.2,5.1,6.6-8.5a1.8,1.8,0,0,1,1.6-.8,1.8,1.8,0,0,1,1.5.8L40.7,35.5a2,2,0,0,1,.1,2.1A1.8,1.8,0,0,1,39.1,38.7Zm-17.2-4H35.1l-6.5-8.6-6.5,8.4C22,34.6,22,34.7,21.9,34.7Zm-11.2,0H19l-4.2-5.1Z" fill="#f68b3c"/>
 														</svg>
 													</div>
@@ -192,6 +226,7 @@
 															</g>
 														</svg>
 													</button>
+													{{ form_end(form) }}
 												</div>
 											</div>
 										</div>
@@ -219,7 +254,7 @@
 										</div>
 										<div class="user-profile__description">
 											<p>Fly me to the moon 🌙 If you feel like your life is a routine, step back
-												                                                and take a deep breath.</p>
+																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																																								                                                and take a deep breath.</p>
 										</div>
 										<div class="user-profile__learning mt-4">
 											<span class="user-profile__label">Social Medias</span>
@@ -272,4 +307,9 @@
 		</div>
 	</section>
 	<!-- Categories List Section End -->
+	<script>
+		$(document).ready(function () {
+$('[data-toggle="tooltip"]').tooltip();
+});
+	</script>
 {% endblock %}
