--- a/public/front/assets/css/style.css
+++ b/public/front/assets/css/style.css
@@ -313,6 +313,39 @@ ol {
 	justify-content: center;
 }
 
+
+
+/*---------------------
+  login Form
+-----------------------*/
+
+.login-section {
+	background: #0d0909;
+	position: fixed;
+	left: 0;
+	top: 0;
+	height: 100%;
+	width: 100%;
+	overflow: auto;
+	z-index: 99;
+	display: none;
+}
+
+.login-section .login-close {
+	height: 50px;
+	width: 50px;
+	border: 2px solid #e10000;
+	border-radius: 50%;
+	font-size: 18px;
+	color: #e10000;
+	line-height: 46px;
+	text-align: center;
+	position: absolute;
+	right: 30px;
+	top: 30px;
+	cursor: pointer;
+	z-index: 9;
+}
 /*---------------------
   Sign Up Form
 -----------------------*/
