--- a/templates/user/new.html.twig
+++ b/templates/user/new.html.twig
@@ -1,11 +1,13 @@
-{% extends 'base.html.twig' %}
-
-{% block title %}New User{% endblock %}
+{% extends 'admin/baseAdmin.html.twig' %}
+{% block title %}New User
+{% endblock %}
 
 {% block body %}
-    <h1>Create new User</h1>
 
-    {{ include('user/_form.html.twig') }}
+	<h4 style="color: white;">Create new User</h4>
 
-    <a href="{{ path('app_user_index') }}">back to list</a>
+	{{ include('user/_form.html.twig') }}
+
+	<a href="{{ path('app_user_index')}}" class="btn btn-secondary btn-xs">back to list
+	</a>
 {% endblock %}
