--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -2,6 +2,7 @@
 
 
 {% block body %}
+
 	<!-- page title area end -->
 	<div
 		class="main-content-inner">
@@ -12,10 +13,10 @@
 					<div class="single-report mb-xs-30">
 						<div class="s-report-inner pr--20 pt--30 mb-3">
 							<div class="icon">
-								<i class="fa fa-btc"></i>
+								<i class="fa fa-users"></i>
 							</div>
 							<div class="s-report-title d-flex justify-content-between">
-								<h4 class="header-title mb-0">Bitcoin</h4>
+								<h4 class="header-title mb-0">Users</h4>
 								<p>24 H</p>
 							</div>
 							<div class="d-flex justify-content-between pb-2">
@@ -30,10 +31,10 @@
 					<div class="single-report mb-xs-30">
 						<div class="s-report-inner pr--20 pt--30 mb-3">
 							<div class="icon">
-								<i class="fa fa-btc"></i>
+								<i class="fa fa-shopping-cart"></i>
 							</div>
 							<div class="s-report-title d-flex justify-content-between">
-								<h4 class="header-title mb-0">Bitcoin Dash</h4>
+								<h4 class="header-title mb-0">Orders</h4>
 								<p>24 H</p>
 							</div>
 							<div class="d-flex justify-content-between pb-2">
@@ -48,10 +49,10 @@
 					<div class="single-report">
 						<div class="s-report-inner pr--20 pt--30 mb-3">
 							<div class="icon">
-								<i class="fa fa-eur"></i>
+								<i class="fa fa-comment-o"></i>
 							</div>
 							<div class="s-report-title d-flex justify-content-between">
-								<h4 class="header-title mb-0">Euthorium</h4>
+								<h4 class="header-title mb-0">Chat</h4>
 								<p>24 H</p>
 							</div>
 							<div class="d-flex justify-content-between pb-2">
@@ -382,8 +383,8 @@
 									</h2>
 									<p>
 										There are many variations of passages of Lorem Ipsum
-																																								                        available, but the majority have suffered alteration
-																																								                        in some...
+																																																																																																														                        available, but the majority have suffered alteration
+																																																																																																														                        in some...
 									</p>
 								</div>
 							</div>
@@ -398,8 +399,8 @@
 									</h2>
 									<p>
 										There are many variations of passages of Lorem Ipsum
-																																								                        available, but the majority have suffered alteration
-																																								                        in some...
+																																																																																																														                        available, but the majority have suffered alteration
+																																																																																																														                        in some...
 									</p>
 								</div>
 							</div>
