--- a/templates/front/baseFront.html.twig
+++ b/templates/front/baseFront.html.twig
@@ -28,6 +28,8 @@
 			<link rel="stylesheet" href="{{asset('front/assets/css/magnific-popup.css')}}" type="text/css">
 			<link rel="stylesheet" href="{{asset('front/assets/css/slicknav.min.css')}}" type="text/css">
 			<link rel="stylesheet" href="{{asset('front/assets/css/style.css')}}" type="text/css">
+			<link rel="stylesheet" type="text/css" href="{{ asset('bundles/starrating/css/rating.css') }}" />
+
 		{% endblock %}
 
 		{% block javascripts %}
@@ -605,5 +607,7 @@
 		<script src="{{asset('front/assets/js/jquery.slicknav.js')}}"></script>
 		<script src="{{asset('front/assets/js/owl.carousel.min.js')}}"></script>
 		<script src="{{asset('front/assets/js/main.js')}}"></script>
+		<script src="{{ asset('bundles/starrating/js/rating.js') }}"></script>
+
 	</body>
 </html>
