--- a/templates/stat/index.html.twig
+++ b/templates/stat/index.html.twig
@@ -9,12 +9,12 @@
 </style>
 
 <div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <h1>Hello ✅</h1>
 
     This friendly message is coming from:
     <ul>
         <li>Your controller at <code><a href="{{ 'C:/Users/khaled/Desktop/pidev/esplay-web-pidev/src/Controller/StatController.php'|file_link(0) }}">src/Controller/StatController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/Users/khaled/Desktop/pidev/esplay-web-pidev/templates/stat/index.html.twig'|file_link(0) }}">templates/stat/index.html.twig</a></code></li>
+        <li>Your template at <code><a href="{{ 'C:/Users/khaled/Desktop/pidev/esplay-web-pidev/templates/stat/indexOne.html.twig'|file_link(0) }}">templates/stat/index.html.twig</a></code></li>
     </ul>
 </div>
 {% endblock %}
