--- a/templates/category_p/edit.html.twig
+++ b/templates/category_p/edit.html.twig
@@ -1,8 +1,8 @@
 {% extends 'admin/baseAdmin.html.twig' %}
-{% block title %}Edit CategoryP{% endblock %}
+{% block title %}Edit Category{% endblock %}
 
 {% block body %}
-    <h1>Edit CategoryP</h1>
+    <h1>Edit Category</h1>
 
     {{ include('category_p/_form.html.twig', {'button_label': 'Update'}) }}
 
