--- a/templates/produit2/edit.html.twig
+++ b/templates/produit2/edit.html.twig
@@ -1,8 +1,8 @@
 {% extends 'admin/baseAdmin.html.twig' %}
-{% block title %}Edit Produit2{% endblock %}
+{% block title %}Edit Produit{% endblock %}
 
 {% block body %}
-    <h1>Edit Produit2</h1>
+    <h1 style="color: beige">Edit Produit </h1>
 
     {{ include('produit2/_form.html.twig', {'button_label': 'Update'}) }}
 
