--- a/templates/admin/store.html.twig
+++ b/templates/admin/store.html.twig
@@ -4,32 +4,37 @@
 {% block body %}
 	<!-- page title area end -->
 	<div class="main-content-inner">
-
+		<a class="btn btn-dark" href="{{ path('/produit2/stat') }}"> Go TO STATS </a>
 		<div class="row" style="margin-top: 30px;">
 			<div class="col-11">
 				<a href="{{ path('app_produit2_new') }}" class="btn btn-success btn-xs pull-right" data-toggle="modal" data-target="#AddModal">Add new product</a>
 			</div>
 		</div>
-		<div
-			class="row">
+		<div>
+			<form role="search" id="nav-search-form" method="post" action="{{ path('/produit/tri') }}">
+				<div class="btn-toolbar" role="toolbar" aria-label="Programmatic control">
+					<div class="btn-group btn-group-sm" aria-label="Set Select2 option">
+						<button class="js-programmatic-set-val btn btn-outline-primary mr-1 mb-1">
+							tri par prix
+						</button>
+					</div>
+				</div>
+
+			</form>
+		</div>
+		<div class="row">
 			<!-- **********************data table start cardssssssssss-->
-			<div class="row">
 
-							{% for produit2 in produit2s %}
-				<div class="col-4 mt-4">
-								<div class="card card-bordered">
-									<img class="card-img-top img-fluid" src="{{asset('/admin/assets/images/media/tetr.jpg')}}" alt="image">
+			{% for produit2 in produit2s %}
+				<div class="col-lg-4 col-md-6 mt-5">
+					<div class="card card-bordered">
+									<img src="{{ vich_uploader_asset(produit2, 'imageFile')|imagine_filter('thumb')   }}" alt="card-image-top" style="width: auto; height:auto ">
 									<div class="card-body">
-										<h5>
-											{{ produit2.nom }} </h5>
-											<h3>
-											{{ produit2.prix }} dt
-
-										</h3>
+										<h5>{{ produit2.nom }} </h5>
+											<h3>{{ produit2.prix }} dt</h3>
 										<p class="card-text">{{ produit2.description }}.</p>
-
 										<a href="{{ path('app_produit2_edit', {'idp2': produit2.idp2}) }}"class="btn btn-outline-warning btn-xs">edit</a>
-										<a href="#" class="btn btn-outline-danger btn-xs" data-toggle="modal" data-target="#deleteModal">Delete</a>
+										<a href="" class="btn btn-outline-danger btn-xs" data-toggle="modal" data-target="#deleteModal" >Delete</a>
 
 
 										<a href="{{ path('cart_add', {'idp2': produit2.idp2}) }}" class="btn btn-success float-right">
@@ -38,8 +43,6 @@
 										</a>
 									</div>
 								</div>
-							</div>
-						</div>
 
 
 					</div>
@@ -47,6 +50,7 @@
 			</div>
 
 			<!---modaaaaaaaaaaaaaaaaaaaaaaaalll deleetteee -->
+		{% for produit2 in produit2s %}
 			<div class="modal fade" id="deleteModal">
 				<div class="modal-dialog">
 					<div class="modal-content">
@@ -60,131 +64,22 @@
 
 						<div class="modal-footer">
 							<button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal">Close</button>
-							<button type="button" class="btn btn-danger btn-sm">Confirm</button>
+							<button type="button" class="btn btn-secondary btn-sm" data-dismiss="modal" >Close</button>
+							{{ include('produit2/_delete_form.html.twig') }}
+
+
+
+
+
+
+
 						</div>
 					</div>
 				</div>
-			</div>
-			<!--modaaaaaaaaaaaaaaaaaaaaaale edittt -->
-
-			<div class="modal fade" id="editModal">
-				<div class="modal-dialog modal-dialog-centered" role="document">
-					<div class="modal-content">
-						<div class="modal-header">
-							<h5 class="modal-title">Edit Item</h5>
-							<button type="button" class="close" data-dismiss="modal">
-								<span>&times;</span>
-							</button>
-						</div>
-						<div class="modal-body">
-							<div class="form-row align-items-center">
-								<div class="col-sm-2 my-1"></div>
-								<div class="col-sm-2 my-1">
-
-									<label for="example-text-input" class="col-form-label">Text</label>
-								</div>
-								<div class="col-sm-6 my-1">
-									<input class="form-control form-control-sm" type="text" value="" id="example-text-input">
-								</div>
-							</div>
-							<div class="form-row align-items-center">
-								<div class="col-sm-2 my-1"></div>
-								<div class="col-sm-2 my-1">
-
-									<label for="example-text-input" class="col-form-label">Text</label>
-								</div>
-								<div class="col-sm-6 my-1">
-									<input class="form-control form-control-sm" type="text" value="" id="example-text-input">
-								</div>
-							</div>
-							<div class="form-row align-items-center">
-								<div class="col-sm-2 my-1"></div>
-								<div class="col-sm-2 my-1">
-
-									<label for="example-text-input" class="col-form-label">Text</label>
-								</div>
-								<div class="col-sm-6 my-1">
-									<input class="form-control form-control-sm" type="text" value="" id="example-text-input">
-								</div>
-							</div>
-							<div class="form-row align-items-center">
-								<div class="col-sm-2 my-1"></div>
-								<div class="col-sm-2 my-1">
-
-									<label for="example-text-input" class="col-form-label">Text</label>
-								</div>
-								<div class="col-sm-6 my-1">
-									<input class="form-control form-control-sm" type="text" value="" id="example-text-input">
-								</div>
-							</div>
-							<div class="form-row align-items-center">
-								<div class="col-sm-2 my-1"></div>
-								<div class="col-sm-2 my-1">
-
-									<label for="example-text-input" class="col-form-label">Text</label>
-								</div>
-								<div class="col-sm-6 my-1">
-									<input class="form-control form-control-sm" type="text" value="" id="example-text-input">
-								</div>
-							</div>
-							<div class="form-row align-items-center">
-								<div class="col-sm-2 my-1"></div>
-								<div class="col-sm-2 my-1">
-
-									<label for="example-text-input" class="col-form-label">Date</label>
-								</div>
-								<div class="col-sm-6 my-1">
-									<input class="form-control form-control-sm" type="date" value="" id="example-text-input">
-								</div>
-							</div>
-							<div class="form-row align-items-center">
-								<div class="col-sm-2 my-1"></div>
-								<div class="col-sm-2 my-1">
-
-									<label for="example-text-input" class="col-form-label">Tel</label>
-								</div>
-								<div class="col-sm-6 my-1">
-									<input class="form-control form-control-sm" type="tel" value="" id="example-text-input">
-								</div>
-							</div>
-							<div class="form-row align-items-center">
-								<div class="col-sm-2 my-1"></div>
-								<div class="col-sm-2 my-1">
-
-									<label for="example-text-input" class="col-form-label">Email</label>
-								</div>
-								<div class="col-sm-6 my-1">
-									<input class="form-control form-control-sm" type="email" value="" id="example-text-input">
-								</div>
-							</div>
-							<div class="form-row align-items-center">
-								<div class="col-sm-2 my-1"></div>
-
-								<div class="col-sm-2 my-1">
-									<label class="col-form-label">Role</label>
-								</div>
-								<div class="col-sm-6 my-1">
-									<select class="custom-select">
-										<option selected="selected" value="player">Player</option>
-										<option value="admin">Admin</option>
-
-									</select>
-								</div>
-
-							</div>
-						</div>
-
-
-						<div class="modal-footer">
-							<button type="button" class="btn btn-secondary btn-xs" data-dismiss="modal">Close</button>
-							<button type="button" class="btn btn-success btn-xs">Save changes</button>
-						</div>
-					</div>
-				</div>
-
-			</div>
+				{% endfor %}
 
 			<!--modaaaaaaaaaaaaaaaaaaaaale add -->
+
 			<div class="modal fade" id="AddModal">
 				<div class="modal-dialog modal-dialog-centered" role="document">
 					<div class="modal-content">
