--- a/templates/category_p/index.html.twig
+++ b/templates/category_p/index.html.twig
@@ -1,11 +1,8 @@
 {% extends 'admin/baseAdmin.html.twig' %}
-
-
-
-{% block title %}CategoryP index{% endblock %}
+{% block title %}Category{% endblock %}
 
 {% block body %}
-    <h1>CategoryP index</h1>
+    <h1>Category</h1>
 
     <table class="table">
         <thead>
