--- a/templates/category_p/show.html.twig
+++ b/templates/category_p/show.html.twig
@@ -2,7 +2,7 @@
 {% block title %}CategoryP{% endblock %}
 
 {% block body %}
-    <h1>CategoryP</h1>
+    <h1>Categories</h1>
 
     <table class="table">
         <tbody>
