--- a/templates/produit2/new.html.twig
+++ b/templates/produit2/new.html.twig
@@ -2,7 +2,7 @@
 {% block title %}New Produit{% endblock %}
 
 {% block body %}
-    <h1>Create new Produit2</h1>
+    <h1>Create new </h1>
 
     {{ include('produit2/_form.html.twig') }}
 
