--- a/templates/front/chat.html.twig
+++ b/templates/front/chat.html.twig
@@ -45,16 +45,7 @@
 											</svg>
 										</div>
 									</div>
-									<div class="messages-page__search mb-0 px-3 pb-3">
-										<div class="custom-form__search-wrapper">
-											<input type="text" class="form-control custom-form" id="search" placeholder="Rechercher un message, un utilisateur…" autocomplete="off">
-											<button type="submit" class="custom-form__search-submit">
-												<svg xmlns="http://www.w3.org/2000/svg" class="svg-icon svg-icon--search" viewbox="0 0 46.6 46.6">
-													<path d="M46.1,43.2l-9-8.9a20.9,20.9,0,1,0-2.8,2.8l8.9,9a1.9,1.9,0,0,0,1.4.5,2,2,0,0,0,1.5-.5A2.3,2.3,0,0,0,46.1,43.2ZM4,21a17,17,0,1,1,33.9,0A17.1,17.1,0,0,1,33,32.9h-.1A17,17,0,0,1,4,21Z" fill="#f68b3c"/>
-												</svg>
-											</button>
-										</div>
-									</div>
+									
 
 
 								</div>
@@ -75,7 +66,7 @@
 												<div class="chat__infos pl-2 pl-md-0">
 													<div class="chat-member__wrapper" data-online="true">
 														<div class="chat-member__avatar">
-															<img src="https://randomuser.me/api/portraits/thumb/women/56.jpg" alt="Jenny Smith" loading="lazy">
+															<img src="{{asset('front/assets/img/download.png')}}" alt="Jenny Smith" loading="lazy">
 															<div class="user-status user-status--large"></div>
 														</div>
 														<div class="chat-member__details">
@@ -264,7 +255,7 @@
 									</div>
 									<div class="user-profile__wrapper">
 										<div class="user-profile__avatar">
-											<img src="https://randomuser.me/api/portraits/women/56.jpg" alt="Jenny Smith" loading="lazy">
+											<img src="{{asset('front/assets/img/download.png')}}" alt="Jenny Smith" loading="lazy">
 										</div>
 										<div class="user-profile__details mt-1">
 											<span class="user-profile__name">Jenny Smith</span>
